fixed! -clearing grid container when clicking buttons

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </div>
 
                     <div class="col-4 circle p-0 position-relative">
-                        <small class="position-absolute start-50 top-50">color</small>
+                        <button class="position-absolute start-50 top-50 palateColor ">color</button>
                         <input type="color" class="getclr " value="#73d37a" name="palate" id="colorPalate">
                     </div>
                     
